samples/_failures_safe/1761153831_502710_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06e2635b.c: In function ‘main’:
./samples/SAFE/__tmp_06e2635b.c:130:5: error: expected expression at end of input
  130 |     if (scanf("%d", &choice) !=
      |     ^~
./samples/SAFE/__tmp_06e2635b.c:130:5: error: expected declaration or statement at end of input
